[gd_scene load_steps=3 format=2]

[ext_resource path="res://dev_tools/AttackCreator.gd" type="Script" id=1]
[ext_resource path="res://scenes/weapon.tscn" type="PackedScene" id=2]

[node name="AttackCreator" type="Node2D"]
script = ExtResource( 1 )

[node name="weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 826.354, 441.653 )
rotation = -0.886892

[node name="SettingsContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 448.0

[node name="InputContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_right = 189.0
margin_bottom = 484.0
size_flags_horizontal = 3

[node name="SliderDamage" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_right = 189.0
margin_bottom = 16.0
max_value = 10.0
value = 1.0
ticks_on_borders = true

[node name="SliderBonusDamageLow" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 20.0
margin_right = 189.0
margin_bottom = 36.0
max_value = 9.0
ticks_on_borders = true

[node name="SliderBonusDamageHigh" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 40.0
margin_right = 189.0
margin_bottom = 56.0
max_value = 10.0
ticks_on_borders = true

[node name="PLACEHOLDER" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 189.0
margin_bottom = 76.0
ticks_on_borders = true

[node name="SliderFireRate" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 80.0
margin_right = 189.0
margin_bottom = 96.0
min_value = 0.1
max_value = 15.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="SliderFireRateRandom" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 100.0
margin_right = 189.0
margin_bottom = 116.0
max_value = 0.8
step = 0.01
ticks_on_borders = true

[node name="PLACEHOLDER2" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 120.0
margin_right = 189.0
margin_bottom = 136.0
ticks_on_borders = true

[node name="SliderBulletCount" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 140.0
margin_right = 189.0
margin_bottom = 156.0
min_value = 1.0
max_value = 12.0
value = 1.0
ticks_on_borders = true

[node name="SliderBulletRandomLow" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 160.0
margin_right = 189.0
margin_bottom = 176.0
max_value = 9.0
ticks_on_borders = true

[node name="SliderBulletRandomHigh" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 180.0
margin_right = 189.0
margin_bottom = 196.0
max_value = 10.0
ticks_on_borders = true

[node name="PLACEHOLDER4" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 200.0
margin_right = 189.0
margin_bottom = 216.0
ticks_on_borders = true

[node name="SliderBulletSpread" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 220.0
margin_right = 189.0
margin_bottom = 236.0
max_value = 360.0
ticks_on_borders = true

[node name="SliderBulletSpreadRandom" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 240.0
margin_right = 189.0
margin_bottom = 256.0
max_value = 360.0
ticks_on_borders = true

[node name="PLACEHOLDER3" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 260.0
margin_right = 189.0
margin_bottom = 276.0
ticks_on_borders = true

[node name="SliderBulletSpeed" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 280.0
margin_right = 189.0
margin_bottom = 296.0
min_value = 100.0
max_value = 999.0
value = 300.0
ticks_on_borders = true

[node name="SliderBulletSpeedRandom" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 300.0
margin_right = 189.0
margin_bottom = 316.0
max_value = 0.8
step = 0.01
ticks_on_borders = true

[node name="SliderBulletRange" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 320.0
margin_right = 189.0
margin_bottom = 336.0
min_value = 50.0
max_value = 600.0
value = 200.0
ticks_on_borders = true

[node name="SliderBulletRangeRandom" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 340.0
margin_right = 189.0
margin_bottom = 356.0
max_value = 0.8
step = 0.01
ticks_on_borders = true

[node name="PLACEHOLDER5" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 360.0
margin_right = 189.0
margin_bottom = 376.0
ticks_on_borders = true

[node name="SliderBulletScale" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 380.0
margin_right = 189.0
margin_bottom = 396.0
min_value = 1.0
max_value = 20.0
value = 3.0
ticks_on_borders = true

[node name="SliderBulletScaleRandom" type="HSlider" parent="SettingsContainer/InputContainer"]
margin_top = 400.0
margin_right = 189.0
margin_bottom = 416.0
max_value = 0.8
step = 0.01
ticks_on_borders = true

[node name="PLACEHOLDER6" type="HSlider" parent="SettingsContainer/InputContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 420.0
margin_right = 189.0
margin_bottom = 436.0
ticks_on_borders = true

[node name="BulletColor" type="ColorPickerButton" parent="SettingsContainer/InputContainer"]
margin_top = 440.0
margin_right = 189.0
margin_bottom = 460.0
color = Color( 1, 0, 0, 1 )

[node name="BackgroundColor" type="ColorPickerButton" parent="SettingsContainer/InputContainer"]
margin_top = 464.0
margin_right = 189.0
margin_bottom = 484.0

[node name="ValueContainer" type="VBoxContainer" parent="SettingsContainer"]
editor/display_folded = true
margin_left = 193.0
margin_right = 217.0
margin_bottom = 484.0
rect_min_size = Vector2( 24, 0 )
custom_constants/separation = 6

[node name="ValueDamage" type="Label" parent="SettingsContainer/ValueContainer"]
margin_right = 24.0
margin_bottom = 14.0
text = "1"
align = 1

[node name="ValueBonusDamageLow" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 20.0
margin_right = 24.0
margin_bottom = 34.0
text = "0"
align = 1

[node name="ValueBonusDamageHigh" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 40.0
margin_right = 24.0
margin_bottom = 54.0
text = "0"
align = 1

[node name="PLACEHOLDER" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 60.0
margin_right = 24.0
margin_bottom = 74.0

[node name="ValueFireRate" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 80.0
margin_right = 24.0
margin_bottom = 94.0
text = "1"
align = 1

[node name="ValueFireRateRandom" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 100.0
margin_right = 24.0
margin_bottom = 114.0
text = "0"
align = 1

[node name="PLACEHOLDER2" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 120.0
margin_right = 24.0
margin_bottom = 134.0

[node name="ValueBulletCount" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 140.0
margin_right = 24.0
margin_bottom = 154.0
text = "1"
align = 1

[node name="ValueBulletRandomLow" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 160.0
margin_right = 24.0
margin_bottom = 174.0
text = "0"
align = 1

[node name="ValueBulletRandomHigh" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 180.0
margin_right = 24.0
margin_bottom = 194.0
text = "0"
align = 1

[node name="PLACEHOLDER4" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 200.0
margin_right = 24.0
margin_bottom = 214.0

[node name="ValueBulletSpread" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 220.0
margin_right = 24.0
margin_bottom = 234.0
text = "0"
align = 1

[node name="ValueBulletSpreadRandom" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 240.0
margin_right = 24.0
margin_bottom = 254.0
text = "0"
align = 1

[node name="PLACEHOLDER3" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 260.0
margin_right = 24.0
margin_bottom = 274.0

[node name="ValueBulletSpeed" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 280.0
margin_right = 24.0
margin_bottom = 294.0
text = "300"
align = 1

[node name="ValueBulletSpeedRandom" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 300.0
margin_right = 24.0
margin_bottom = 314.0
text = "0"
align = 1

[node name="ValueBulletRange" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 320.0
margin_right = 24.0
margin_bottom = 334.0
text = "200"
align = 1

[node name="ValueBulletRangeRandom" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 340.0
margin_right = 24.0
margin_bottom = 354.0
text = "0"
align = 1

[node name="PLACEHOLDER5" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 360.0
margin_right = 24.0
margin_bottom = 374.0

[node name="ValueBulletScale" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 380.0
margin_right = 24.0
margin_bottom = 394.0
text = "3"
align = 1

[node name="ValueBulletScaleRanom" type="Label" parent="SettingsContainer/ValueContainer"]
margin_top = 400.0
margin_right = 24.0
margin_bottom = 414.0
text = "0"
align = 1

[node name="DescriptionContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_left = 221.0
margin_right = 464.0
margin_bottom = 484.0
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="DescDamage" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_right = 243.0
margin_bottom = 14.0
text = "base damage."

[node name="DescBonusDamageLow" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 20.0
margin_right = 243.0
margin_bottom = 34.0
text = "to"

[node name="DescBonusDamageHigh" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 40.0
margin_right = 243.0
margin_bottom = 54.0
text = "random extra damage."

[node name="PLACEHOLDER" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 60.0
margin_right = 243.0
margin_bottom = 74.0

[node name="DescFireRate" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 80.0
margin_right = 243.0
margin_bottom = 94.0
text = "attack(s) per second with"

[node name="DescFireRateRandom" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 100.0
margin_right = 243.0
margin_bottom = 114.0
text = "% random variance."

[node name="PLACEHOLDER2" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 120.0
margin_right = 243.0
margin_bottom = 134.0

[node name="DescBulletCount" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 140.0
margin_right = 243.0
margin_bottom = 154.0
text = "projectile(s) per attack."

[node name="DescBulletRandomLow" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 160.0
margin_right = 243.0
margin_bottom = 174.0
text = "to"

[node name="DescBulletRandomHigh" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 180.0
margin_right = 243.0
margin_bottom = 194.0
text = "random extra projectiles(s) per attack."

[node name="PLACEHOLDER4" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 200.0
margin_right = 243.0
margin_bottom = 214.0

[node name="DescBulletSpread" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 220.0
margin_right = 243.0
margin_bottom = 234.0
text = "degree scatter angle per attack."

[node name="DescBulletSpreadRandom" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 240.0
margin_right = 243.0
margin_bottom = 254.0
text = "degree random angle per projectile."

[node name="PLACEHOLDER3" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 260.0
margin_right = 243.0
margin_bottom = 274.0

[node name="DescBulletSpeed" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 280.0
margin_right = 243.0
margin_bottom = 294.0
text = "pixel/sec projectile speed with"

[node name="DescBulletSpeedRandom" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 300.0
margin_right = 243.0
margin_bottom = 314.0
text = "% random variance."

[node name="DescBulletRange" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 320.0
margin_right = 243.0
margin_bottom = 334.0
text = "pixel range with"

[node name="DescBulletRangeRandom" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 340.0
margin_right = 243.0
margin_bottom = 354.0
text = "% random variance."

[node name="PLACEHOLDER5" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 360.0
margin_right = 243.0
margin_bottom = 374.0

[node name="DescBulletScale" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 380.0
margin_right = 243.0
margin_bottom = 394.0
text = "projectile size with"

[node name="DescBulletScaleRandom" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 400.0
margin_right = 243.0
margin_bottom = 414.0
text = "% random variance."

[node name="PLACEHOLDER6" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 420.0
margin_right = 243.0
margin_bottom = 434.0

[node name="DescBulletColor" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 440.0
margin_right = 243.0
margin_bottom = 454.0
text = "bullet color."

[node name="DescBackgroundColor" type="Label" parent="SettingsContainer/DescriptionContainer"]
margin_top = 460.0
margin_right = 243.0
margin_bottom = 474.0
text = "background color."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 11.2424
margin_top = 502.258
margin_right = 191.242
margin_bottom = 594.258

[node name="ButtonSaveWeapon" type="Button" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 20.0
text = "Safe attack pattern"

[node name="WeaponName" type="LineEdit" parent="VBoxContainer/ButtonSaveWeapon"]
visible = false
margin_left = 183.0
margin_top = -1.0
margin_right = 343.0
margin_bottom = 23.0
align = 1
placeholder_text = "weapon name"
placeholder_alpha = 0.1

[node name="ButtonConfirmSafe" type="Button" parent="VBoxContainer/ButtonSaveWeapon/WeaponName"]
margin_top = 25.0
margin_right = 159.0
margin_bottom = 46.0
text = "Confirm"

[node name="NoNameWarning" type="Label" parent="VBoxContainer/ButtonSaveWeapon/WeaponName/ButtonConfirmSafe"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 27.0
margin_right = 159.0
margin_bottom = 45.0
text = "ADD A NAME FIRST!"
align = 1

[node name="ButtonLoadWeapon" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 180.0
margin_bottom = 44.0
text = "Load attack pattern"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ButtonLoadWeapon"]
visible = false
margin_left = 184.0
margin_right = 343.0
margin_bottom = 20.0
text = "Default"
align = 1

[node name="ButtonRestoreDefaults" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 68.0
text = "Restore defaults"

[node name="ButtonDeleteProjectiles" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 180.0
margin_bottom = 92.0
text = "Clear all projectiles"

[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderDamage" to="." method="_on_SliderDamage_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBonusDamageLow" to="." method="_on_SliderBonusDamageLow_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBonusDamageHigh" to="." method="_on_SliderBonusDamageHigh_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderFireRate" to="." method="_on_SliderFireRate_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderFireRateRandom" to="." method="_on_SliderFireRateRandom_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletCount" to="." method="_on_SliderBulletCount_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletRandomLow" to="." method="_on_SliderBulletRandomLow_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletRandomHigh" to="." method="_on_SliderBulletRandomHigh_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletSpread" to="." method="_on_SliderBulletSpread_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletSpreadRandom" to="." method="_on_SliderBulletSpreadRandom_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletSpeed" to="." method="_on_SliderBulletSpeed_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletSpeedRandom" to="." method="_on_SliderBulletSpeedRandom_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletRange" to="." method="_on_SliderBulletRange_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletRangeRandom" to="." method="_on_SliderBulletRangeRandom_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletScale" to="." method="_on_SliderBulletScale_value_changed"]
[connection signal="value_changed" from="SettingsContainer/InputContainer/SliderBulletScaleRandom" to="." method="_on_SliderBulletScaleRandom_value_changed"]
[connection signal="color_changed" from="SettingsContainer/InputContainer/BulletColor" to="." method="_on_BulletColor_color_changed"]
[connection signal="color_changed" from="SettingsContainer/InputContainer/BackgroundColor" to="." method="_on_BackgroundColor_color_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonSaveWeapon" to="." method="_on_ButtonSaveWeapon_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSaveWeapon/WeaponName/ButtonConfirmSafe" to="." method="_on_ButtonConfirmSafe_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadWeapon" to="." method="_on_ButtonLoadWeapon_pressed"]
[connection signal="item_selected" from="VBoxContainer/ButtonLoadWeapon/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/ButtonRestoreDefaults" to="." method="_on_ButtonRestoreDefaults_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDeleteProjectiles" to="." method="_on_ButtonDeleteProjectiles_pressed"]
